# ksef-client-python

./: .gitattributes  .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  open-api.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: release.yml
.github/workflows/: ksef-docs-release-watch.yml  publish-pypi.yml  python-application.yml  python-e2e.yml  release-please-dedupe.yml  release-please.yml  validate-models.yml
docs/: README.md  configuration.md  errors.md  fa3-sdk.md  getting-started.md  migration-typed-model-api.md
docs/api/: README.md  (+13 more)
examples/: list_invoices.py  send_invoice_json.py
specs/: ksef-openapi.snapshot.json
tests/: helpers.py  test_base64url.py  test_base_api_client.py  test_client.py  test_clients.py  test_config.py  test_crypto.py  test_documents_fa3.py  test_e2e_demo_token_flow.py  test_e2e_resume_flows.py  test_e2e_token_flows.py  test_e2e_verification_link.py  test_exceptions.py  test_generated_artifacts.py  test_http.py  test_ksef_number.py  test_lighthouse_openapi_coverage.py  test_models.py  test_openapi_coverage.py  test_openapi_models.py  test_services_auth.py  test_services_batch.py  test_services_csr.py  test_services_hwm.py  test_services_person_token.py  test_services_qr.py  test_services_sessions.py  test_services_verification_link.py  test_services_workflows.py  test_services_xades.py  test_tools_models_stub.py  test_tools_openapi.py  test_tools_sync_generated.py  test_types.py  test_zip_utils.py
tools/: __init__.py  check_cli_packaging.py  check_coverage.py  generate_models_stub.py  generate_openapi_models.py  lint.py  openapi_spec.py  sync_generated.py
(+192 files in other folders)
